# starbreak-tracker

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: lint.yml  test.yml
backend/: .flake8  Dockerfile.local  pyproject.toml
backend/backend/: app.py
backend/backend/controllers/: __init__.py  items.py
backend/backend/db/: __init__.py
backend/backend/db/models/: __init__.py  base.py  drop.py  item.py  modifier.py  weapon.py
backend/backend/serializers/: __init__.py  base.py  item.py
backend/tests/: conftest.py  test_routes.py
backend/tests/controllers/: test_items.py
scripts/: ci-start.sh
