[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@aricodes.net>",]
readme = "README.md"
[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
flake8-black = "^0.3.6"
flake8-annotations = "^2.9.1"
watchfiles = "^0.18.1"
pytest = "^7.2.0"
pytest-flake8 = "^1.1.1"
pep8-naming = "^0.13.3"


[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
peewee = "^3.15.4"

[tool.poetry.scripts]
starbreak = 'backend.app:run'
